# wiki_documental

./: .gitignore  LICENSE  PMV_wiki_documental.md  README.md  README_PROYECTO.md  config.yaml  index.html  lanzar_setup_wiki.bat  pyproject.toml  setup_wiki.ps1  start_local.bat
docs/: PMV_wiki_modular.md  arquitectura.md  audit_report_sprint1.md  principios_codigo_wiki.md  tareas_codex.md
scripts/: check_sidebar_links.py  package_static.py
sidebar/: _auto_index.md
templates/: PlantillaPropuestas.dotx  plantilla_base.docx
tests/: __init__.py  test_cli.py  test_config.py  test_docx_to_md.py  test_encoding_utf8.py  test_headings_map.py  test_index_builder.py  test_ingest.py  test_ingest_sources.py  test_md_post.py  test_normalize.py  test_package.py  test_pipeline_doc_sources.py  test_pipeline_full.py  test_pipeline_verify.py  test_readme_builder.py  test_reclassify.py  test_reset_work_dir.py  test_search_index.py  test_sidebar.py  test_sidebar_meta.py  test_slug.py  test_strip_toc.py  test_system.py  test_utils.py  test_verify_pre_ingest.py
tools/: clean_docx_format.py  sidebar_from_frontmatter.py  update_sidebar.py
wiki/: 1-1_objetivos-del-documento.md  1-2-1_descripcion-general.md  1-2-2_situacion-actual.md  1-2_servicio-de-soporte-general.md  1-3-1_descripcion-general.md  1-3-2_situacion-actual.md  1-4-1_descripcion-general.md  1-4-2_situacion-actual.md  1-4_interfaces-con-clientes-externos.md  1-5-1_descripcion-general.md  1-5-2_situacion-actual.md  1-5_soporte-y-mantenimiento-interarma-galia.md  1-6-1_descripcion-general.md  1-6-2_situacion-actual.md  (+159 more)
(+76 files in other folders)
